messagepack-derive/tests/fail/map_and_array.stderr
error: `map` and `array` are mutually exclusive
 --> tests/fail/map_and_array.rs:4:10
  |
4 | #[derive(Encode, Decode)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `map` and `array` are mutually exclusive
 --> tests/fail/map_and_array.rs:4:18
  |
4 | #[derive(Encode, Decode)]
  |                  ^^^^^^
  |
  = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)
